# master_eb04.04.19

devel/: .catkin  .rosinstall  setup.sh
devel/include/yolo_node/: Num.h  detection_info.h
devel/lib/kinect2_bridge/: kinect2_bridge
devel/lib/kinect2_calibration/: kinect2_calibration
devel/lib/kinect2_viewer/: kinect2_viewer
devel/lib/kinectTesting/: 0000_cloud.pcd  0001_cloud.pcd  data_capture  publisher_test  subscriber_test  testing  testing1  viewer_edited
devel/lib/kinect_node/: cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_10.pcd  cloud_cluster_11.pcd  cloud_cluster_12.pcd  cloud_cluster_13.pcd  cloud_cluster_14.pcd  cloud_cluster_15.pcd  cloud_cluster_16.pcd  cloud_cluster_17.pcd  cloud_cluster_18.pcd  cloud_cluster_19.pcd  cloud_cluster_2.pcd  cloud_cluster_20.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd  cloud_cluster_6.pcd  cloud_cluster_7.pcd  cloud_cluster_8.pcd  cloud_cluster_9.pcd  table_scene_mug_stereo_textured_cylinder.pcd  table_scene_mug_stereo_textured_plane.pcd
devel/lib/pkgconfig/: kinect2_bridge.pc  kinect2_calibration.pc  kinect2_registration.pc  kinect2_viewer.pc  kinectTesting.pc  kinect_node.pc  yolo_node.pc
devel/lib/python2.7/dist-packages/yolo_node/: __init__.py
devel/lib/yolo_node/: message_test
devel/share/kinect2_bridge/cmake/: kinect2_bridgeConfig.cmake
devel/share/kinect2_calibration/cmake/: kinect2_calibrationConfig.cmake
devel/share/kinect2_registration/cmake/: kinect2_registrationConfig.cmake
devel/share/kinect2_viewer/cmake/: kinect2_viewerConfig.cmake
devel/share/kinectTesting/cmake/: kinectTesting-msg-paths.cmake  kinectTestingConfig.cmake
devel/share/kinect_node/cmake/: kinect_nodeConfig.cmake
devel/share/roseus/ros/kinectTesting/: manifest.l
devel/share/yolo_node/cmake/: yolo_node-msg-extras.cmake  yolo_nodeConfig.cmake
src/kinect_node/: CMakeLists.txt  CMakeLists.txt.user.20  CMakeLists.txt.user.4.8-pre1  package.xml
src/kinect_node/src/: kinect_network.cpp  kinect_node_processor.cpp
src/yolo_node/: CMakeLists.txt  setup.py
src/yolo_node/msg/: detection_info.msg
src/yolo_node/src/: .gitignore  annotation_tool.py  detection.py  test_file.py
(+15 files in other folders)
